<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grid_background" >
    
    <!-- Select an Album -->
        <TextView android:id="@+id/txt_select_album"        
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center_horizontal"
             android:background="@color/select_an_album_bckg"
             android:paddingTop="5dip"
             android:paddingBottom="5dip"
             android:text="@string/select_an_album"
             android:textSize="20sp"
             android:textColor="@color/white" />
        
     <!-- Default Albums Title-->   
        <TextView android:id="@+id/txt_default_albums"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:text="@string/title_default"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_below="@+id/txt_select_album" />
        
        <!-- DEFAULT ALBUMS -->
        <LinearLayout android:id="@+id/default_linear"
            android:layout_below="@+id/txt_default_albums"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/services_shape"
            android:orientation="vertical">
            <!-- Camera Shots -->
            <LinearLayout android:id="@+id/camera_shots_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView android:id="@+id/camera_shots_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/default_thumb"/>
                <TextView android:id="@+id/txt_camera_shots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_shots"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dip"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"/>
            </LinearLayout>            
           <ImageView android:id="@+id/divider_camera"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/divider_album_list"/> 
           <!-- All Photos --> 
           <LinearLayout android:id="@+id/all_photos_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView android:id="@+id/all_photos_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/default_thumb"/>
                <TextView android:id="@+id/txt_all_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_photos"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"/>
            </LinearLayout>            
           <ImageView android:id="@+id/divider_all_photos"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/divider_album_list"/> 
           <!-- Album3 --> 
          <LinearLayout android:id="@+id/album3_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView android:id="@+id/album3_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/icon_camera" android:scaleType="centerCrop"/>
                <TextView android:id="@+id/album3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photos"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"/>
            </LinearLayout>            
           <ImageView android:id="@+id/divider_album3"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/divider_album_list"/>  
        </LinearLayout> 
        
       <!-- User title -->     
       <TextView android:id="@+id/txt_user"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title_user"
           android:textColor="@color/white"
           android:textSize="18sp"
           android:layout_below="@+id/default_linear"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="10dip" />
           
<!-- SERVICES -->        
<LinearLayout android:id="@+id/services_linear"
    android:layout_below="@+id/txt_user"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip"
    android:layout_marginTop="5dip"
    android:orientation="vertical"
    android:background="@drawable/services_shape">
    <!-- Facebook -->
    <LinearLayout android:id="@+id/linear_fb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >
        <ImageView android:id="@+id/icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_facebook"/>
        <TextView android:id="@+id/txt_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/facebook"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />
                  </LinearLayout>
    <ImageView android:id="@+id/fb_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_album_list" />
    <!-- Flickr -->
    <LinearLayout android:id="@+id/linear_flickr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >
        <ImageView android:id="@+id/icon_flickr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_flickr"/>
        <TextView android:id="@+id/txt_flickr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/flickr"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />
                  </LinearLayout>
    <ImageView android:id="@+id/flickr_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_album_list" />
    <!-- Instagram -->
    <LinearLayout android:id="@+id/linear_instagram"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >
        <ImageView android:id="@+id/icon_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_instagram"/>
        <TextView android:id="@+id/txt_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/instagram"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />
                  </LinearLayout>
    <ImageView android:id="@+id/instagram_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_album_list" />
    <!-- Picasa -->
    <LinearLayout android:id="@+id/linear_picasa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >
        <ImageView android:id="@+id/icon_picasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_picasa"/>
        <TextView android:id="@+id/txt_picasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/picasa"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />
                  </LinearLayout>
    <ImageView android:id="@+id/picasa_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_album_list" />
</LinearLayout>
</RelativeLayout>